--- a/app/src/main/res/layout/item_scenario_card.xml
+++ b/app/src/main/res/layout/item_scenario_card.xml
@@ -20,10 +20,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
+            android:background="@drawable/shape"
             android:gravity="center"
             android:orientation="vertical">
-<!--            android:background="@drawable/shape"-->
+
 
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -52,42 +52,45 @@
                     android:gravity="center"
                     android:padding="5dp"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:fontFamily="@font/prstartk"
+                    android:text="Name"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
         <TextView
-            android:id="@+id/item_swipe_right_indicator"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:alpha="0"
-            android:gravity="right"
-            android:padding="30dp"
-            android:text="No!"
-            android:textColor="#FFFFFF"/>
-<!--        android:background="@drawable/choicesbg_right"-->
-
-        <TextView
-            android:id="@+id/item_swipe_left_indicator"
+            android:id="@+id/right_overlay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0"
             android:gravity="left"
             android:padding="30dp"
-            android:text="Yes?.."
-            android:textColor="#FFFFFF" />
-<!--        android:background="@drawable/choicesbg_left"-->
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/prstartk"
+            android:background="@drawable/choicesbg_right"/>
+
+
+        <TextView
+            android:id="@+id/left_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0"
+            android:gravity="right"
+            android:padding="30dp"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/prstartk"
+            android:background="@drawable/choicesbg_left"/>
 
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="380sp"
         android:layout_height="wrap_content"
-
-        android:orientation="vertical">
-<!--        android:background="@drawable/shape2"-->
+        android:background="@drawable/shape2"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/txtScenario"
@@ -95,10 +98,11 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:justificationMode="inter_word"
-            android:lineSpacingExtra="3dp"
-            android:padding="20dp"
+            android:lineSpacingExtra="5dp"
+            android:padding="10dp"
             android:text="TextView"
-            android:textColor="#030303" />
+            android:textColor="#030303"
+            android:fontFamily="@font/pokemon"/>
     </LinearLayout>
 
 
