--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <stroke android:color="#11710F"
+                android:width="2dp"/>
 
-    <stroke android:color="#11710F"
-        android:width="2dp"/>
+            <corners
+                android:radius="4dp"
+                android:bottomLeftRadius="0dp"
+                android:bottomRightRadius="0dp"/>
+            <padding
+                android:left="5dp"
+                android:top="5dp"
+                android:right="5dp"
+                android:bottom="5dp" />
+        </shape>
+    </item>
 
-    <corners
-        android:radius="4dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"/>
-    <padding
-        android:left="5dp"
-        android:top="5dp"
-        android:right="5dp"
-        android:bottom="5dp" />
-</shape>
+</layer-list>
