--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="10dp"
         >
 
         <LinearLayout
             android:id="@+id/health"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@drawable/health" />
+
+            <ProgressBar
+                android:id="@+id/progressBar5"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:progressDrawable="@drawable/custom_progress"
+                android:scaleY="0.5"
+                android:progress="50"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/social"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -93,12 +118,14 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="550dp">
+        android:layout_height="550dp"
+        >
 
         <com.yuyakaido.android.cardstackview.CardStackView
             android:id="@+id/card_stack_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#D8D47D"
             android:padding="4dp" />
 
 
@@ -130,17 +157,5 @@
             android:text="TextView"
             android:textColor="#11710F" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/buttonbtn_exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exit Game"
-        android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:textSize="10dp"
-        android:layout_margin="10dp"/>
 
 </LinearLayout>
