--- a/app/src/main/res/layout/item_narration_card.xml
+++ b/app/src/main/res/layout/item_narration_card.xml
@@ -13,14 +13,17 @@
         android:layout_width="380sp"
         android:layout_height="461dp"
         android:layout_gravity="center"
-        android:foregroundGravity="center">
+        android:foregroundGravity="center"
+        android:background="@drawable/shape"
+        >
 
         <LinearLayout
             android:id="@+id/margin"
             android:layout_width="match_parent"
-            android:layout_height="447dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@drawable/shape"
+
+            android:background="@drawable/narrationbg"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -31,14 +34,13 @@
                 android:layout_gravity="center">
 
 
-                <ImageView
-                    android:id="@+id/cardImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="425dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/bg3"
-                    android:padding="4dp"
-                    android:scaleType="centerCrop" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/cardImage"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="425dp"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:padding="4dp"-->
+<!--                    android:scaleType="centerCrop" />-->
 
                 <TextView
                     android:id="@+id/txt_narration"
@@ -48,6 +50,7 @@
                     android:fontFamily="@font/pokemon"
                     android:gravity="center"
                     android:text="This is a narration"
+                    android:textColor="@android:color/black"
                     android:textSize="15dp" />
 
             </FrameLayout>
