--- a/app/src/main/res/layout/item_scenario_card.xml
+++ b/app/src/main/res/layout/item_scenario_card.xml
@@ -10,9 +10,10 @@
 
     <FrameLayout
         android:id="@+id/card"
-        android:layout_width="380sp"
-        android:layout_height="wrap_content"
+        android:layout_width="390sp"
+        android:layout_height="390dp"
         android:layout_gravity="center"
+        android:background="@drawable/scenariobg"
         android:foregroundGravity="center">
 
         <LinearLayout
@@ -32,10 +33,10 @@
 
                 <ImageView
                     android:id="@+id/cardImage"
-                    android:layout_width="300dp"
+                    android:layout_width="380sp"
                     android:layout_height="350dp"
                     android:padding="4dp"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="fitCenter" />
 
             </FrameLayout>
 
@@ -49,12 +50,12 @@
                     android:id="@+id/characterName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/prstartk"
                     android:gravity="center"
                     android:padding="5dp"
+                    android:text="Name"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/prstartk"
-                    android:text="Name"/>
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
@@ -65,11 +66,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0"
+            android:background="@drawable/choicesbg_right"
+            android:fontFamily="@font/prstartk"
             android:gravity="left"
             android:padding="30dp"
-            android:textColor="#FFFFFF"
-            android:fontFamily="@font/prstartk"
-            android:background="@drawable/choicesbg_right"/>
+            android:textColor="#FFFFFF" />
 
 
         <TextView
@@ -77,32 +78,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0"
+            android:background="@drawable/choicesbg_left"
+            android:fontFamily="@font/prstartk"
             android:gravity="right"
             android:padding="30dp"
-            android:textColor="#FFFFFF"
-            android:fontFamily="@font/prstartk"
-            android:background="@drawable/choicesbg_left"/>
+            android:textColor="#FFFFFF" />
 
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="380sp"
+        android:layout_width="390sp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape2"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtScenario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pokemon"
             android:gravity="center"
             android:justificationMode="inter_word"
             android:lineSpacingExtra="5dp"
             android:padding="10dp"
             android:text="TextView"
-            android:textColor="#030303"
-            android:fontFamily="@font/pokemon"/>
+            android:textColor="#030303" />
     </LinearLayout>
 
 
