--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <padding
-        android:bottom="10dp"
-        android:left="20dp"
-        android:right="20dp"
-        android:top="10dp"/>
+        android:bottom="5dp"
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp"/>
 
     <size android:width="150dp"/>
     <corners android:radius="10dp"/>
-    <solid android:color="#437142"/>
+    <solid android:color="#0E450D"/>
 
 </shape>
