--- a/app/src/main/res/layout/activity_create_card_dialog.xml
+++ b/app/src/main/res/layout/activity_create_card_dialog.xml
@@ -13,6 +13,7 @@
         android:id="@+id/spinner_characters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:spinnerMode="dropdown"
         />
 
@@ -29,12 +30,14 @@
         android:id="@+id/etxt_choice_left"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Type choice left here.."
-        android:padding="20dp"
         android:layout_margin="10dp"
         android:background="@drawable/custom_edit_text"
         android:fontFamily="@font/pokemon"
-        android:textSize="15dp"/>
+        android:hint="Type choice left here.."
+        android:maxLength="20"
+        android:maxLines="1"
+        android:padding="20dp"
+        android:textSize="10dp" />
 
     <TextView
         android:id="@+id/lblright"
@@ -49,12 +52,14 @@
         android:id="@+id/etxt_choice_right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Type choice right here.."
-        android:padding="20dp"
         android:layout_margin="10dp"
-        android:fontFamily="@font/pokemon"
         android:background="@drawable/custom_edit_text"
-        android:textSize="15dp"/>
+        android:fontFamily="@font/pokemon"
+        android:hint="Type choice right here.."
+        android:maxLength="20"
+        android:maxLines="1"
+        android:padding="20dp"
+        android:textSize="10dp" />
 
     <TextView
         android:id="@+id/lblscenario"
@@ -69,21 +74,94 @@
         android:id="@+id/etxt_scenario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:gravity="center|start|top"
-        android:inputType="textMultiLine"
-        android:padding="20dp"
         android:layout_margin="10dp"
-        android:hint="Type the scenario here.."
-        android:fontFamily="@font/pokemon"
         android:background="@drawable/custom_edit_text"
-        android:textSize="15dp"/>
+        android:ems="10"
+        android:fontFamily="@font/pokemon"
+        android:gravity="center|start|top"
+        android:hint="Type the scenario here.."
+        android:inputType="textMultiLine"
+        android:maxLines="3"
+        android:padding="20dp"
+        android:textSize="10dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Status Affected"
+        android:fontFamily="@font/prstartk"
+        android:padding="5dp"
+        android:textColor="#0E450D"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/etxt_health"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_edit_text"
+            android:fontFamily="@font/pokemon"
+            android:hint="Health"
+            android:inputType="numberSigned|number"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textSize="10dp" />
+
+        <EditText
+            android:id="@+id/etxt_social"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_edit_text"
+            android:fontFamily="@font/pokemon"
+            android:hint="Social"
+            android:inputType="numberSigned|number"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textSize="10dp" />
+
+        <EditText
+            android:id="@+id/etxt_grades"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_edit_text"
+            android:fontFamily="@font/pokemon"
+            android:hint="Grades"
+            android:inputType="numberSigned|number"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textSize="10dp" />
+
+        <EditText
+            android:id="@+id/etxt_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_edit_text"
+            android:fontFamily="@font/pokemon"
+            android:hint="Money"
+            android:inputType="numberSigned|number"
+            android:maxLines="1"
+            android:padding="10dp"
+            android:textSize="10dp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_margin="10dp">
 
         <Button
             android:id="@+id/btn_add"
