--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -12,7 +12,8 @@
         android:layout_weight="1"
         android:text="1"
         android:padding="11dp"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/pokemon"
+        android:textColor="#0E450D"
         />
 
     <TextView
@@ -20,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Raeaeara"
-        android:fontFamily="@font/pokemon"
-        android:padding="10dp"/>
+        android:fontFamily="@font/prstartk"
+        android:padding="10dp"
+        android:text="rarararara"
+        android:textColor="#0E450D"/>
 
     <TextView
         android:id="@+id/txt_score"
@@ -31,5 +33,6 @@
         android:layout_weight="1"
         android:text="1st Term"
         android:fontFamily="@font/pokemon"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textColor="#0E450D"/>
 </LinearLayout>
