--- a/app/src/main/res/layout/dialog_leaderboard.xml
+++ b/app/src/main/res/layout/dialog_leaderboard.xml
@@ -15,7 +15,8 @@
         android:text="Leaderboard"
         android:padding="20dp"
         android:fontFamily="@font/prstartk"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textColor="#0E450D"/>
 
 <!--    <androidx.recyclerview.widget.RecyclerView-->
 <!--        android:layout_width="match_parent"-->
