--- a/app/src/main/res/layout/item_character_spinner.xml
+++ b/app/src/main/res/layout/item_character_spinner.xml
@@ -7,10 +7,9 @@
     android:background="@android:color/transparent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img_character"
         android:layout_width="100dp"
-        android:layout_height="66dp"
-        />
+        android:layout_height="66dp"/>
 
     <TextView
         android:id="@+id/txt_char_name"
@@ -19,6 +18,7 @@
         android:fontFamily="@font/prstartk"
         android:gravity="center_vertical"
         android:padding="20dp"
-        android:text="Test" />
+        android:text="Test"
+        android:textColor="#0E450D"/>
 
 </LinearLayout>
