--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,19 +24,25 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/mark_health"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/circle" />
+
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:srcCompat="@drawable/health" />
 
             <ProgressBar
-                android:id="@+id/progressBar5"
+                android:id="@+id/progressBar_health"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
+                android:progress="50"
                 android:progressDrawable="@drawable/custom_progress"
-                android:scaleY="0.5"
-                android:progress="50"/>
+                android:scaleY="0.5" />
         </LinearLayout>
 
         <LinearLayout
@@ -49,13 +55,19 @@
             android:gravity="center">
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/mark_social"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/circle" />
+
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:srcCompat="@drawable/social" />
 
             <ProgressBar
-                android:id="@+id/progressBar3"
+                android:id="@+id/progressBar_social"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
@@ -75,13 +87,19 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/mark_money"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/circle" />
+
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:srcCompat="@drawable/money" />
 
             <ProgressBar
-                android:id="@+id/progressBar2"
+                android:id="@+id/progressBar_money"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
@@ -100,13 +118,19 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/mark_grades"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/circle" />
+
+            <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:srcCompat="@drawable/grades" />
 
             <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/progressBar_grades"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
@@ -118,7 +142,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="500dp"
         android:layout_gravity="center"
         >
 
@@ -128,7 +152,7 @@
             android:layout_width="390sp"
             android:layout_height= "405dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/backgroundcard"
+            app:srcCompat="@drawable/cardbg"
             />
 
         <com.yuyakaido.android.cardstackview.CardStackView
