--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -2,37 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/custom_edit_text"
     android:orientation="horizontal"
-    android:background="@android:color/transparent">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/txt_rank"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="1"
-        android:padding="11dp"
         android:fontFamily="@font/pokemon"
-        android:textColor="#0E450D"
-        />
+        android:padding="10dp"
+        android:text="100"
+        android:textColor="#0E450D" />
 
     <TextView
         android:id="@+id/txt_player_name"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:fontFamily="@font/prstartk"
         android:padding="10dp"
         android:text="rarararara"
-        android:textColor="#0E450D"/>
+        android:textColor="#0E450D" />
 
     <TextView
         android:id="@+id/txt_score"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="1st Term"
         android:fontFamily="@font/pokemon"
         android:padding="10dp"
-        android:textColor="#0E450D"/>
+        android:text="10th Term"
+        android:textColor="#0E450D" />
 </LinearLayout>
