--- a/app/src/main/res/layout/activity_my_deck.xml
+++ b/app/src/main/res/layout/activity_my_deck.xml
@@ -22,7 +22,9 @@
     <ListView
         android:id="@+id/deck_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="500dp"
+        android:dividerHeight="10sp"
+        android:layout_margin="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
