--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -43,16 +43,16 @@
             android:onClick="openAddCard"/>
 
         <Button
-            android:id="@+id/btn_back"
+            android:id="@+id/btn_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
             android:fontFamily="@font/prstartk"
-            android:text="Close"
-            android:textColor="@android:color/white"
-            android:onClick="closeCustomDeck"/>
+            android:onClick="closeCustomDeck"
+            android:text="Save"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
 </LinearLayout>
