--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@android:color/transparent">
+    android:background="@drawable/custom_edit_text">
 
     <TextView
         android:id="@+id/etxt_deck_name"
@@ -15,27 +15,5 @@
         android:fontFamily="@font/prstartk"
         android:text="TextView"
         android:textColor="#0E450D"/>
-
-    <Button
-        android:id="@+id/btn_edit"
-        android:layout_width="62dp"
-        android:layout_height="34dp"
-        android:layout_margin="5dp"
-        android:background="#0E450D"
-        android:fontFamily="@font/prstartk"
-        android:text="Edit"
-        android:textColor="@android:color/white"
-        android:textSize="10dp" />
-
-    <Button
-        android:id="@+id/btn_play_deck"
-        android:layout_width="63dp"
-        android:layout_height="34dp"
-        android:layout_margin="5dp"
-        android:background="#0E450D"
-        android:fontFamily="@font/prstartk"
-        android:text="Play"
-        android:textColor="@android:color/white"
-        android:textSize="10dp" />
 
 </LinearLayout>
