--- a/app/src/main/res/layout/activity_my_deck.xml
+++ b/app/src/main/res/layout/activity_my_deck.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:dividerHeight="10sp"
+        android:divider="@android:color/transparent"
         android:layout_margin="10dp"/>
 
     <LinearLayout
