--- a/app/src/main/res/layout/dialog_edit_deck.xml
+++ b/app/src/main/res/layout/dialog_edit_deck.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="#f4f3d7">
 
     <TextView
         android:layout_width="match_parent"
@@ -29,16 +30,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <Button
             android:id="@+id/btn_edit"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
             android:fontFamily="@font/prstartk"
-            android:text="Edit Cards"
+            android:layout_weight="1"
+            android:text="Edit"
             android:textColor="@android:color/white" />
 
         <Button
@@ -48,8 +51,19 @@
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
             android:fontFamily="@font/prstartk"
+            android:layout_weight="1"
             android:text="Play"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_shape"
+            android:fontFamily="@font/prstartk"
+            android:layout_weight="1"
+            android:text="Delete"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
 </LinearLayout>
