--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -19,11 +19,12 @@
 
 
     <ListView
+        android:id="@+id/card_list_view"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:dividerHeight="10sp"
+        android:layout_margin="10dp"
         android:divider="@android:color/transparent"
-        android:layout_margin="10dp"/>
+        android:dividerHeight="10sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
