--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,7 @@
         android:fontFamily="@font/prstartk"
         android:layout_margin="5dp"
         android:textSize="13dp"
+        android:onClick="googleLogin"
         />
 
 
