--- a/app/src/main/res/layout/dialog_leaderboard.xml
+++ b/app/src/main/res/layout/dialog_leaderboard.xml
@@ -35,6 +35,7 @@
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:text="Close"/>
+        android:text="Close"
+        android:textSize="13dp"/>
 
 </LinearLayout>
