--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -43,7 +43,8 @@
             android:text="Add Card"
             android:textColor="@android:color/white"
             android:onClick="openAddCard"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:textSize="13dp"/>
 
         <Button
             android:id="@+id/btn_save"
@@ -55,7 +56,8 @@
             android:fontFamily="@font/prstartk"
             android:text="Save"
             android:textColor="@android:color/white"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:textSize="13dp"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -67,7 +69,8 @@
             android:onClick="closeCustomDeck"
             android:text="Close"
             android:textColor="@android:color/white"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:textSize="13dp"/>
 
     </LinearLayout>
 
