--- a/app/src/main/res/layout/dialog_create_card.xml
+++ b/app/src/main/res/layout/dialog_create_card.xml
@@ -178,7 +178,8 @@
             android:background="@drawable/button_shape"
             android:fontFamily="@font/prstartk"
             android:text="Add"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="13dp"/>
 
         <Button
             android:id="@+id/btn_cancel"
@@ -190,6 +191,7 @@
             android:fontFamily="@font/prstartk"
             android:text="Cancel"
             android:textColor="@android:color/white"
+            android:textSize="13dp"
             />
 
     </LinearLayout>
