--- a/app/src/main/res/layout/dialog_edit_deck.xml
+++ b/app/src/main/res/layout/dialog_edit_deck.xml
@@ -42,7 +42,8 @@
             android:fontFamily="@font/prstartk"
             android:layout_weight="1"
             android:text="Edit"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="13dp"/>
 
         <Button
             android:id="@+id/btn_play_deck"
@@ -53,7 +54,8 @@
             android:fontFamily="@font/prstartk"
             android:layout_weight="1"
             android:text="Play"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:textSize="13dp"/>
 
         <Button
             android:layout_width="wrap_content"
