--- a/app/src/main/res/layout/dialog_new_deck.xml
+++ b/app/src/main/res/layout/dialog_new_deck.xml
@@ -27,12 +27,13 @@
 
     <Button
         android:id="@+id/btn_create_new_deck"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="Create Deck"
         android:background="@drawable/button_shape"
         android:textColor="@android:color/white"
         android:fontFamily="@font/prstartk"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:textSize="13dp"/>
 
 </LinearLayout>
