--- a/app/src/main/res/layout/dialog_player_name.xml
+++ b/app/src/main/res/layout/dialog_player_name.xml
@@ -38,6 +38,7 @@
         android:textColor="@android:color/white"
         android:fontFamily="@font/prstartk"
         android:layout_margin="10dp"
+        android:textSize="13dp"
         />
 
 
