--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -54,6 +54,7 @@
             android:fontFamily="@font/prstartk"
             android:text="Save"
             android:textColor="@android:color/white"
+            android:onClick="saveCustomDeck"
             android:layout_weight="1"/>
 
         <Button
