--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".CustomDeckActivity"
-    android:background="@drawable/bg3">
+    android:background="#f4f3d7">
 
     <TextView
         android:id="@+id/txt_deck_name"
