--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".SignUpDialog"
+    tools:context=".SignUpActivity"
     android:gravity="center"
     android:background="#f4f3d7"
     >
