--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,74 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg3"
-    android:gravity="center"
+    android:background="#f4f3d7"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.example.mobapdemp.StartActivity">
 
-    <TextView
-        android:id="@+id/txt_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="600dp"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:padding="20dp"
-        android:text="Username"
-        android:layout_margin="10dp"
-        android:background="@drawable/custom_edit_text"
-        android:textColor="#0E450D"
-        android:textSize="18dp"
-         />
+        android:orientation="vertical"
+        android:background="@drawable/custom_edit_text">
 
-    <Button
-        android:id="@+id/btn_new"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
-        android:onClick="startGame"
-        android:text="New Game"
-        android:textColor="@android:color/white"
-        android:textSize="13dp"
-        />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerInParent="true"
+            android:gravity="top"
+            android:src="@drawable/andrew"
+            app:civ_border_color="#0E450D"
+            app:civ_border_width="2dp" />
 
-    <Button
-        android:id="@+id/btn_my_deck"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
-        android:onClick="createDeck"
-        android:text="Custom Decks"
-        android:textColor="@android:color/white"
-        android:textSize="13dp"/>
+        <TextView
+            android:id="@+id/txt_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/prstartk"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Lasallian Simulator"
+            android:textColor="#0E450D"
+            android:textSize="25dp" />
 
-    <Button
-        android:id="@+id/btn_leaderboard"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
-        android:onClick="openLeaderboard"
-        android:text="Leaderboard"
-        android:textColor="@android:color/white"
-        android:textSize="13dp"
-         />
+        <Button
+            android:id="@+id/btn_new"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_shape"
+            android:fontFamily="@font/prstartk"
+            android:onClick="startGame"
+            android:text="New Game"
+            android:textColor="@android:color/white"
+            android:textSize="13dp" />
 
-    <Button
-        android:id="@+id/btn_signout"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
-        android:onClick="openLeaderboard"
-        android:text="Sign Out"
-        android:textColor="@android:color/white"
-        android:textSize="13dp"
-        />
+        <Button
+            android:id="@+id/btn_my_deck"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_shape"
+            android:fontFamily="@font/prstartk"
+            android:onClick="createDeck"
+            android:text="Custom Decks"
+            android:textColor="@android:color/white"
+            android:textSize="13dp" />
+
+        <Button
+            android:id="@+id/btn_leaderboard"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_shape"
+            android:fontFamily="@font/prstartk"
+            android:onClick="openLeaderboard"
+            android:text="Leaderboard"
+            android:textColor="@android:color/white"
+            android:textSize="13dp" />
+
+        <Button
+            android:id="@+id/btn_signout"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/button_shape"
+            android:fontFamily="@font/prstartk"
+            android:onClick="openLeaderboard"
+            android:text="Sign Out"
+            android:textColor="@android:color/white"
+            android:textSize="13dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
